--- a/observability/Chart.yaml
+++ b/observability/Chart.yaml
@@ -22,3 +22,4 @@ version: 1.0.0
 # follow Semantic Versioning. They should reflect the version the application is using.
 # It is recommended to use it with quotes.
 appVersion: "1.0.0"
+icon: https://www.google.com/images/branding/googlelogo/2x/googlelogo_color_272x92dp.png
