--- a/observability/values.yaml
+++ b/observability/values.yaml
@@ -6,6 +6,11 @@ namespace: monitor-ns
 
 #Redpanda host that exposes metrics "https://docs.redpanda.com/docs/manage/monitoring/" 
 redpanda_metrics_host: intverse-rp.intverse-rp-ns.svc.cluster.local
+redpanda_metrics_ssl:
+  enabled: true
+
+connect_metrics_ssl:
+  enabled: true
 
 prometheus:
   name: prometheus
